--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Weather",
-  "name": "Weather: Do I need an umbrella?",
+  "short_name": "Шляпа",
+  "name": "Шляпа — веселая командная словесная игра",
   "icons": [
     {
       "src": "/hat.svg",
@@ -15,9 +15,9 @@
   ],
   "id": "/?source=pwa",
   "start_url": "/?source=pwa",
-  "background_color": "#3367D6",
+  "background_color": "#030712",
   "display": "standalone",
   "scope": "/",
-  "theme_color": "#3367D6",
-  "description": "Weather forecast information"
+  "theme_color": "#030712",
+  "description": "Веселая командная словесная игра"
 }
